# cybercafe-erp-pro

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build-android-apk.yml  build-windows-exe.yml
android/: build.gradle
android/app/: build.gradle
assets/fonts/: README.md
assets/icons/: README.md
assets/images/: README.md
assets/templates/: README.md
backend/: .env  .env.example  .gitignore  README.md  package.json
backend/src/: app.js
backend/src/config/: constants.js  database.js
backend/src/middleware/: auth.js  errorHandler.js  validate.js
backend/src/models/: AuditLog.js  Bill.js  Company.js  Customer.js  Expense.js  Item.js  Ledger.js  Supplier.js  User.js  Voucher.js
backend/src/routes/: accounting.routes.js  auth.routes.js  backup.routes.js  bill.routes.js  company.routes.js  customer.routes.js  expense.routes.js  gst.routes.js  item.routes.js  report.routes.js  supplier.routes.js  sync.routes.js
backend/src/services/: bill.service.js  gst.service.js  seed.service.js
backend/src/utils/: indianFormat.js  logger.js  response.js
docs/: PRD.md  QuickBilling_Uncle_Prompt.md
lib/: main.dart
lib/app/: app.dart  router.dart
lib/core/backup/: backup_service.dart
lib/core/config/: app_config.dart
lib/core/database/: database_init.dart  db_helper.dart
lib/features/gst/: gst_screen.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  flutter_window.cpp  main.cpp  resource.h  runner.exe.manifest  runner.h  runner.rc  runner_version.h.in  utils.cpp  utils.h  win32_window.cpp  win32_window.h
(+42 files in other folders)
